Fixed AOS on mobile

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,5 +1,5 @@
 nav{
-    background-color: #085196f1;
+    background-color: #08519662;
     width: max-content;
     display:block;
     padding: 1rem 2rem;
